--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@next-admin/web",
+  "name": "@panda/web",
   "version": "1.0.0",
   "private": true,
   "description": "下一代企业级中后台系统",
