--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,6 +1,4 @@
-name: panda-api
-# x-env-file: &env_file
-#   - .env.example
+name: ozma
 
 services:
   mysql:
@@ -11,8 +9,7 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=qwer1234
     networks:
-      - panda-api-network
-    # env_file: *env_file
+      - ozma-network
   consul:
     image: hashicorp/consul:1.22
     container_name: consul-server
@@ -21,8 +18,7 @@ services:
       - "8500:8500"
       - "8600:8600/udp"
     networks:
-      - panda-api-network
-    # env_file: *env_file
+      - ozma-network
   minio:
     image: minio/minio:RELEASE.2025-04-22T22-12-26Z
     container_name: minio
@@ -33,8 +29,7 @@ services:
     environment:
       - MINIO_ROOT_USER=root
       - MINIO_ROOT_PASSWORD=qwer1234
-    # env_file: *env_file
     
 networks:
-  panda-api-network:
+  ozma-network:
     driver: bridge
